--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ ipykernel = "^6.26.0"
 scikit-learn = "^1.3.2"
 graphviz = "^0.20.1"
 torch = ">=2.0.0, !=2.0.1, !=2.1.0"
+ipywidgets = "^8.1.1"
 
 
 [build-system]
